--- a/src/Dog.css
+++ b/src/Dog.css
@@ -1,4 +1,4 @@
-div {
+.dog-div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,7 +7,7 @@ div {
   width: 100vw;
 }
 
-button {
+.woof-woof {
   color: white;
   background-color: crimson;
   border: 1px solid crimson;
